--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "~6.14.0",
+    "babel-loader": "~6.2.5",
+    "babel-preset-es2015": "~6.14.0",
+    "babel-preset-react": "~6.11.1",
     "css-loader": "~0.24.0",
     "file-loader": "~0.9.0",
     "node-sass": "~3.8.0",
+    "react": "~15.3.1",
+    "react-dom": "~15.3.1",
+    "react-redux": "~4.4.5",
+    "redux": "~3.5.2",
     "sass-loader": "~4.0.0",
     "style-loader": "~0.13.1",
     "url-loader": "~0.5.7",
