--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "babel-preset-react": "~6.11.1",
     "css-loader": "~0.24.0",
     "file-loader": "~0.9.0",
+    "material-ui": "~0.15.4",
     "node-sass": "~3.8.0",
     "react": "~15.3.1",
     "react-dom": "~15.3.1",
     "react-redux": "~4.4.5",
+    "react-tap-event-plugin": "~1.0.0",
     "redux": "~3.5.2",
     "sass-loader": "~4.0.0",
     "style-loader": "~0.13.1",
