--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "socket.io": "~1.4.8"
+  },
   "devDependencies": {
     "babel-core": "~6.14.0",
     "babel-loader": "~6.2.5",
