--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "socket.io": "~1.4.8"
+    "socket.io": "~1.4.8",
+    "x-ray": "~2.3.0"
   },
   "devDependencies": {
     "babel-core": "~6.14.0",
