--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "socket.io": "~1.4.8",
-    "x-ray": "~2.3.0"
+    "cheerio": "~0.22.0",
+    "moment": "~2.14.1",
+    "node-fetch": "~1.6.0",
+    "socket.io": "~1.4.8"
   },
   "devDependencies": {
     "babel-core": "~6.14.0",
