--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "~0.22.0",
-    "moment": "~2.14.1",
-    "node-fetch": "~1.6.0",
-    "socket.io": "~1.4.8"
+    "cheerio": "~1.0.0-rc.2",
+    "moment": "~2.19.1",
+    "node-fetch": "~1.7.3",
+    "socket.io": "~2.0.4"
   },
   "devDependencies": {
-    "babel-core": "~6.14.0",
-    "babel-loader": "~6.2.5",
-    "babel-preset-es2015": "~6.14.0",
-    "babel-preset-react": "~6.11.1",
-    "css-loader": "~0.25.0",
-    "file-loader": "~0.9.0",
-    "material-ui": "~0.15.4",
-    "react": "~15.3.1",
-    "react-dom": "~15.3.1",
-    "react-redux": "~4.4.5",
-    "react-tap-event-plugin": "~1.0.0",
-    "redux": "~3.6.0",
-    "style-loader": "~0.13.1",
-    "url-loader": "~0.5.7",
-    "webpack": "~1.13.2"
+    "babel-core": "~6.26.0",
+    "babel-loader": "~7.1.2",
+    "babel-preset-es2015": "~6.24.1",
+    "babel-preset-react": "~6.24.1",
+    "css-loader": "~0.28.7",
+    "file-loader": "~1.1.5",
+    "material-ui": "~0.19.4",
+    "react": "~16.0.0",
+    "react-dom": "~16.0.0",
+    "react-redux": "~5.0.6",
+    "react-tap-event-plugin": "~3.0.2",
+    "redux": "~3.7.2",
+    "style-loader": "~0.19.0",
+    "url-loader": "~0.6.2",
+    "webpack": "~3.8.1"
   }
 }
