--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "~1.0.0-rc.2",
-    "moment": "~2.19.1",
-    "node-fetch": "~1.7.3",
-    "socket.io": "~2.0.4"
+    "cheerio": "^1.0.0-rc.2",
+    "moment": "^2.19.1",
+    "node-fetch": "^1.7.3",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {
-    "babel-core": "~6.26.0",
-    "babel-loader": "~7.1.2",
-    "babel-preset-env": "~1.6.1",
-    "babel-preset-react": "~6.24.1",
-    "css-loader": "~0.28.7",
-    "file-loader": "~1.1.5",
-    "material-ui": "~0.19.4",
-    "react": "~16.0.0",
-    "react-dom": "~16.0.0",
-    "react-redux": "~5.0.6",
-    "react-tap-event-plugin": "~3.0.2",
-    "redux": "~3.7.2",
-    "style-loader": "~0.19.0",
-    "url-loader": "~0.6.2",
-    "webpack": "~3.8.1"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
+    "material-ui": "^0.19.4",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "react-tap-event-plugin": "^3.0.2",
+    "redux": "^3.7.2",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.8.1"
   }
 }
